Adicionando os panos de fundo

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__container">
+      <section class="header__container">
         <h1 class="header__title">
           Quer salvar o seu relacionamento? Você precisa assistir isso primeiro:
         </h1>
-      </div>
+      </section>
     </header>
     <main class="main">
       <section class="main__container">
-        <div class="main__container__video" id="video">
+        <article class="main__container__video" id="video">
           <p class="main__container__video">Imagine que tem um vídeo aqui 😁</p>
-        </div>
+        </article>
         <button class="main__container__button" type="button">
           Garanta a salvação agora
         </button>
