Adicionando novas seções ao projeto

--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
       </section>
     </header>
     <main class="main">
-      <section class="main__container">
-        <article class="main__container__video" id="video">
-          <p class="main__container__video">Imagine que tem um vídeo aqui 😁</p>
+      <section class="main__header--container">
+        <h2 class="main__header--container__title">
+          Assista esse vídeo antes que ele saia do ar! No ar
+          <span class="attention">APENAS HOJE</span>
+        </h2>
+      </section>
+      <section class="main__video--container">
+        <article class="main__video--container__video" id="video">
+          <p class="main__video--container__video">
+            Imagine que tem um vídeo aqui 😁
+          </p>
         </article>
-        <button class="main__container__button" type="button">
+      </section>
+      <section class="main__promotion--container">
+        <button class="main__promotion--container__button" type="button">
           Garanta a salvação agora
         </button>
       </section>
