--- a/index.html
+++ b/index.html
@@ -38,9 +38,17 @@
         </article>
       </section>
       <section class="main__promotion--container">
-        <button class="main__promotion--container__button" type="button">
-          Garanta a salvação agora
-        </button>
+        <a
+          class="main__promotion--container__button"
+          href="https://google.com"
+          rel="noreferrer"
+          target="_blank"
+        >
+          Garanta a promoção agora
+        </a>
+        <p class="main__promotion--container__text">
+          De <span class="line-through">R$ 199,90</span> por R$ 49,90
+        </p>
       </section>
     </main>
   </body>
