--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/header.css" />
+    <link rel="stylesheet" href="./styles/main_header.css" />
+    <link rel="stylesheet" href="./styles/main_video.css" />
+    <link rel="stylesheet" href="./styles/main_promotion.css" />
     <title>Salve seu casamento</title>
   </head>
   <body>
