--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <main class="main">
       <section class="main__header--container">
         <h2 class="main__header--container__title">
-          Assista esse vídeo antes que ele saia do ar! No ar
-          <span class="attention">APENAS HOJE</span>
+          Assista esse vídeo antes que ele saia do ar!
+        </h2>
+        <h2 class="main__header--container__title">
+          No ar <span class="attention">APENAS HOJE</span>
         </h2>
       </section>
       <section class="main__video--container">
