Corrigido erro das cores das fontes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           Assista esse vídeo antes que ele saia do ar!
         </h2>
         <h2 class="main__header--container__title">
-          No ar <span class="attention">APENAS HOJE</span>
+          No ar até <span class="attention"></span>
         </h2>
       </section>
       <section class="main__video--container">
@@ -57,5 +57,6 @@
         </p>
       </section>
     </main>
+    <script src="app.js"></script>
   </body>
 </html>
