--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./styles/main_header.css" />
     <link rel="stylesheet" href="./styles/main_video.css" />
     <link rel="stylesheet" href="./styles/main_promotion.css" />
+    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <title>Salve seu casamento</title>
   </head>
   <body>
@@ -37,11 +38,13 @@
         </h2>
       </section>
       <section class="main__video--container">
-        <article class="main__video--container__video" id="video">
-          <p class="main__video--container__video">
-            Imagine que tem um vídeo aqui 😁
-          </p>
-        </article>
+        <video
+          id="my-video"
+          class="main__video--container__video"
+          preload="auto"
+          src="./video/VSL - 01.mp4"
+          poster="./backgrounds/placeholder.png"
+        ></video>
       </section>
       <section class="main__promotion--container">
         <a
@@ -58,5 +61,6 @@
       </section>
     </main>
     <script src="app.js"></script>
+    <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
   </body>
 </html>
