Erro em que o usuário consegui abrir o controle do vídeo, corrigido

--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
           id="my-video"
           class="main__video--container__video"
           preload="auto"
+          oncontextmenu="return false;"
           src="./video/VSL - 01.mp4"
           poster="./backgrounds/placeholder.png"
-        ></video>
+          <!--
+          controlsList="nodownload"
+          --
+        >
+          >
+        </video>
       </section>
       <section class="main__promotion--container">
         <a
