Erro em que o usuário consegui abrir o controle do vídeo, corrigido

--- a/index.html
+++ b/index.html
@@ -45,12 +45,7 @@
           oncontextmenu="return false;"
           src="./video/VSL - 01.mp4"
           poster="./backgrounds/placeholder.png"
-          <!--
-          controlsList="nodownload"
-          --
-        >
-          >
-        </video>
+        ></video>
       </section>
       <section class="main__promotion--container">
         <a
