Alterada a capa do vídeo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="main__promotion--container">
         <a
           class="main__promotion--container__button"
-          href="https://google.com"
+          href="https://checkout.ticto.com.br/OEA1849EC"
           rel="noreferrer"
           target="_blank"
         >
