Alterado tempo de exibição do botão

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <section class="header__container">
         <h1 class="header__title">
-          Quer salvar o seu relacionamento? Você precisa assistir isso primeiro:
+          Quer salvar o seu casamento? Você precisa assistir isso primeiro:
         </h1>
       </section>
     </header>
