Realizando os últimos ajustes

--- a/index.html
+++ b/index.html
@@ -78,14 +78,21 @@
         </h2>
       </section>
       <section class="main__video--container">
-        <video
+        <iframe
+          class="main__video--container__video"
+          src="https://www.youtube.com/embed/ghlG0sts-AE?controls=0;showinfo=0;showmore=0"
+          title="YouTube video player"
+          oncontextmenu="return false;"
+          frameborder="0"
+        ></iframe>
+        <!-- <video
           id="my-video"
           class="main__video--container__video"
           preload="auto"
           oncontextmenu="return false;"
           src="./video/VSL - 01.mp4"
           poster="./backgrounds/placeholder.png"
-        ></video>
+        ></video> -->
       </section>
       <section class="main__promotion--container">
         <a
