Realizando os últimos ajustes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="./styles/main_header.css" />
     <link rel="stylesheet" href="./styles/main_video.css" />
     <link rel="stylesheet" href="./styles/main_promotion.css" />
-    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <title>Salve seu casamento</title>
     <!-- Meta Pixel Code -->
     <script>
@@ -80,7 +79,7 @@
       <section class="main__video--container">
         <iframe
           class="main__video--container__video"
-          src="https://www.youtube.com/embed/ghlG0sts-AE?controls=0;showinfo=0;showmore=0"
+          src="https://www.youtube.com/embed/ghlG0sts-AE?controls=0&disablekb=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
           title="YouTube video player"
           oncontextmenu="return false;"
           frameborder="0"
@@ -101,6 +100,5 @@
       </section>
     </main>
     <script src="app.js"></script>
-    <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
   </body>
 </html>
