Realizando os últimos ajustes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <section class="main__video--container">
         <iframe
           class="main__video--container__video"
-          src="https://www.youtube.com/embed/ghlG0sts-AE?controls=0&disablekb=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
+          src="https://www.youtube.com/embed/IhXkzWT-l3c?controls=0&disablekb=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
           title="YouTube video player"
           frameborder="0"
         ></iframe>
