adicionada seção de comentários

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
           De <span class="line-through">R$ 199,90</span> por R$ 29,90
         </p>
       </section>
+      <section class="main__comments--section"></section>
     </main>
     <script src="app.js"></script>
   </body>
