--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./styles/main_header.css" />
     <link rel="stylesheet" href="./styles/main_video.css" />
     <link rel="stylesheet" href="./styles/main_promotion.css" />
+    <link rel="stylesheet" href="./styles/main_comments.css" />
     <title>Salve seu casamento</title>
     <!-- Meta Pixel Code -->
     <script>
