--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <link rel="icon" href="./favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Antonio:wght@600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -22,9 +30,10 @@
     <link rel="stylesheet" href="./styles/main_video.css" />
     <link rel="stylesheet" href="./styles/main_promotion.css" />
     <link rel="stylesheet" href="./styles/main_comments.css" />
+    <link rel="stylesheet" href="./styles/main__for.css" />
     <title>Salve seu casamento</title>
     <!-- Meta Pixel Code -->
-    <script>
+    <!-- <script>
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
         n = f.fbq = function () {
@@ -57,7 +66,7 @@
         width="1"
         style="display: none"
         src="https://www.facebook.com/tr?id=1722512338168052&ev=PageView&noscript=1"
-    /></noscript>
+    /></noscript> -->
     <!-- End Meta Pixel Code -->
   </head>
   <body>
@@ -99,6 +108,51 @@
         </p>
       </section>
       <section class="main__comments--section"></section>
+      <section class="main__for--section">
+        <h2 class="main__for--section__title">O que você vai aprender:</h2>
+        <ul class="main__for--section__list">
+          <li class="main__for--section__list__item">
+            <img
+              class="main__for--section__list__item__icon"
+              aria-hidden="true"
+              src="./images/amor.png"
+            />
+            <p class="main__for--section__list__item__text">Casamento</p>
+          </li>
+          <li class="main__for--section__list__item">
+            <img
+              class="main__for--section__list__item__icon"
+              aria-hidden="true"
+              src="./images/amor.png"
+            />
+            <p class="main__for--section__list__item__text">Casamento</p>
+          </li>
+          <li class="main__for--section__list__item">
+            <img
+              class="main__for--section__list__item__icon"
+              aria-hidden="true"
+              src="./images/amor.png"
+            />
+            <p class="main__for--section__list__item__text">Casamento</p>
+          </li>
+          <li class="main__for--section__list__item">
+            <img
+              class="main__for--section__list__item__icon"
+              aria-hidden="true"
+              src="./images/amor.png"
+            />
+            <p class="main__for--section__list__item__text">Casamento</p>
+          </li>
+          <li class="main__for--section__list__item">
+            <img
+              class="main__for--section__list__item__icon"
+              aria-hidden="true"
+              src="./images/amor.png"
+            />
+            <p class="main__for--section__list__item__text">Casamento</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <script src="app.js"></script>
   </body>
