Removido background da página

--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
     <link rel="icon" href="./favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Antonio:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/main_header.css" />
@@ -117,7 +114,9 @@
               aria-hidden="true"
               src="./images/amor.png"
             />
-            <p class="main__for--section__list__item__text">Casamento</p>
+            <p class="main__for--section__list__item__text">
+              Identificar os problemas do seu casamento
+            </p>
           </li>
           <li class="main__for--section__list__item">
             <img
@@ -125,7 +124,9 @@
               aria-hidden="true"
               src="./images/amor.png"
             />
-            <p class="main__for--section__list__item__text">Casamento</p>
+            <p class="main__for--section__list__item__text">
+              Restauração por meio do diálogo
+            </p>
           </li>
           <li class="main__for--section__list__item">
             <img
@@ -133,7 +134,10 @@
               aria-hidden="true"
               src="./images/amor.png"
             />
-            <p class="main__for--section__list__item__text">Casamento</p>
+            <p class="main__for--section__list__item__text">
+              Plano de Ação! Quais atitudes devem ser tomadas para salvar o seu
+              casamento
+            </p>
           </li>
           <li class="main__for--section__list__item">
             <img
@@ -141,15 +145,19 @@
               aria-hidden="true"
               src="./images/amor.png"
             />
-            <p class="main__for--section__list__item__text">Casamento</p>
+            <p class="main__for--section__list__item__text">
+              Entender quando é necessário buscar ajuda profissional
+            </p>
           </li>
-          <li class="main__for--section__list__item">
+          <li class="main__for--section__list__item bonus">
             <img
               class="main__for--section__list__item__icon"
               aria-hidden="true"
               src="./images/amor.png"
             />
-            <p class="main__for--section__list__item__text">Casamento</p>
+            <p class="main__for--section__list__item__text">
+              BÔNUS: Guia do amor incondicional
+            </p>
           </li>
         </ul>
       </section>
