Adicionada a seção de garantia

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <link rel="stylesheet" href="./styles/main_video.css" />
     <link rel="stylesheet" href="./styles/main_promotion.css" />
     <link rel="stylesheet" href="./styles/main_comments.css" />
-    <link rel="stylesheet" href="./styles/main__for.css" />
+    <link rel="stylesheet" href="./styles/main_for.css" />
+    <link rel="stylesheet" href="./styles/main_guarantee.css" />
     <title>Salve seu casamento</title>
     <!-- Meta Pixel Code -->
     <!-- <script>
@@ -160,6 +161,31 @@
             </p>
           </li>
         </ul>
+      </section>
+      <section class="main__guarantee--section">
+        <img
+          class="main__guarantee--section__image"
+          src="./images/garantia.png"
+          alt="Selo de garantia de 7 dias"
+        />
+        <article class="main__guarantee--section__text--box">
+          <h2 class="main__guarantee--section__text--box__title">
+            Teste grátis por 7 dias!
+          </h2>
+          <p class="main__guarantee--section__text--box__text">
+            E pode ficar tranquila... Você tem 7 dias para experimentar
+            gratuitamente e consumir o conteúdo do Como salvar seu casamento!
+          </p>
+          <p class="main__guarantee--section__text--box__text">
+            Se, durante esse período, decidir que o conteúdo não é para você,
+            tudo bem...
+          </p>
+          <p class="main__guarantee--section__text--box__text">
+            Basta solicitar o reembolso pelo e-mail de suporte
+            (suporte@pequenasatitudes.com.br) que você receberá 100% do valor
+            investido de volta.
+          </p>
+        </article>
       </section>
     </main>
     <script src="app.js"></script>
