Adicionada a seção de garantia

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta
+    <!-- <meta
       name="facebook-domain-verification"
       content="7dgnx4pgjxr05430ge27gwhtirmros"
-    />
+    /> -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="./styles/main_comments.css" />
     <link rel="stylesheet" href="./styles/main_for.css" />
     <link rel="stylesheet" href="./styles/main_guarantee.css" />
+    <link rel="stylesheet" href="./styles/footer.css" />
     <title>Salve seu casamento</title>
     <!-- Meta Pixel Code -->
     <!-- <script>
@@ -188,6 +189,16 @@
         </article>
       </section>
     </main>
+    <footer class="footer">
+      <article class="footer__copyright">
+        <p class="footer__copyright__text">
+          ESTE SITE NÃO É do FACEBOOK: Estes site não faz parte do site do
+          Facebook ou do Meta Inc. Além disso, este site NÃO é endossado pelo
+          Facebook de nenhuma maneira. FACEBOOK é uma marca comercial
+          independente da META, Inc.
+        </p>
+      </article>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
