Adicionada a seção de garantia

--- a/index.html
+++ b/index.html
@@ -200,5 +200,6 @@
       </article>
     </footer>
     <script src="app.js"></script>
+    <script type="module" src="jquery.js"></script>
   </body>
 </html>
