--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="./styles/footer.css" />
     <title>Salve seu casamento</title>
     <!-- Meta Pixel Code -->
-    <!-- <script>
+    <!--<script>
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
         n = f.fbq = function () {
@@ -200,5 +200,6 @@
       </article>
     </footer>
     <script src="app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </body>
 </html>
