Otimizado CSS e Js

--- a/index.html
+++ b/index.html
@@ -1,204 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <!-- <meta
-      name="facebook-domain-verification"
-      content="7dgnx4pgjxr05430ge27gwhtirmros"
-    /> -->
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Olá" />
-    <link rel="icon" href="./favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/header.css" />
-    <link rel="stylesheet" href="./styles/main_header.css" />
-    <link rel="stylesheet" href="./styles/main_video.css" />
-    <link rel="stylesheet" href="./styles/main_promotion.css" />
-    <link rel="stylesheet" href="./styles/main_comments.css" />
-    <link rel="stylesheet" href="./styles/main_for.css" />
-    <link rel="stylesheet" href="./styles/main_guarantee.css" />
-    <link rel="stylesheet" href="./styles/footer.css" />
-    <title>Salve seu casamento</title>
-    <!-- Meta Pixel Code -->
-    <!--<script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1722512338168052");
-      fbq("track", "PageView");
-    </script>
-    <noscript
-      ><img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1722512338168052&ev=PageView&noscript=1"
-    /></noscript> -->
-    <!-- End Meta Pixel Code -->
-  </head>
-  <body>
-    <header class="header">
-      <section class="header__container">
-        <h1 class="header__title">
-          Quer salvar o seu casamento? Você precisa assistir isso primeiro:
-        </h1>
-      </section>
-    </header>
-    <main class="main">
-      <section class="main__header--container">
-        <h2 class="main__header--container__title">
-          Assista esse vídeo antes que ele saia do ar!
-        </h2>
-        <h2 class="main__header--container__title">
-          No ar até <span class="attention"></span>
-        </h2>
-      </section>
-      <section class="main__video--container">
-        <iframe
-          class="main__video--container__video"
-          src="https://www.youtube.com/embed/IhXkzWT-l3c?controls=0&disablekb=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
-          title="YouTube video player"
-          frameborder="0"
-        ></iframe>
-      </section>
-      <section class="main__promotion--container">
-        <a
-          class="main__promotion--container__button"
-          href="https://checkout.ticto.com.br/OEA1849EC"
-          rel="noreferrer"
-          target="_blank"
-        >
-          Garanta a promoção agora
-        </a>
-        <p class="main__promotion--container__text">
-          De <span class="line-through">R$ 199,90</span> por R$ 29,90
-        </p>
-      </section>
-      <section class="main__comments--section"></section>
-      <section class="main__for--section">
-        <h2 class="main__for--section__title">O que você vai aprender:</h2>
-        <ul class="main__for--section__list">
-          <li class="main__for--section__list__item">
-            <img
-              class="main__for--section__list__item__icon"
-              aria-hidden="true"
-              src="./images/amor.png"
-            />
-            <p class="main__for--section__list__item__text">
-              Identificar os problemas do seu casamento
-            </p>
-          </li>
-          <li class="main__for--section__list__item">
-            <img
-              class="main__for--section__list__item__icon"
-              aria-hidden="true"
-              src="./images/amor.png"
-            />
-            <p class="main__for--section__list__item__text">
-              Restauração por meio do diálogo
-            </p>
-          </li>
-          <li class="main__for--section__list__item">
-            <img
-              class="main__for--section__list__item__icon"
-              aria-hidden="true"
-              src="./images/amor.png"
-            />
-            <p class="main__for--section__list__item__text">
-              Plano de Ação! Quais atitudes devem ser tomadas para salvar o seu
-              casamento
-            </p>
-          </li>
-          <li class="main__for--section__list__item">
-            <img
-              class="main__for--section__list__item__icon"
-              aria-hidden="true"
-              src="./images/amor.png"
-            />
-            <p class="main__for--section__list__item__text">
-              Entender quando é necessário buscar ajuda profissional
-            </p>
-          </li>
-          <li class="main__for--section__list__item bonus">
-            <img
-              class="main__for--section__list__item__icon"
-              aria-hidden="true"
-              src="./images/amor.png"
-            />
-            <p class="main__for--section__list__item__text">
-              BÔNUS: Guia do amor incondicional
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="main__guarantee--section">
-        <img
-          class="main__guarantee--section__image"
-          src="./images/garantia.png"
-          alt="Selo de garantia de 7 dias"
-        />
-        <article class="main__guarantee--section__text--box">
-          <h2 class="main__guarantee--section__text--box__title">
-            Teste grátis por 7 dias!
-          </h2>
-          <p class="main__guarantee--section__text--box__text">
-            E pode ficar tranquila... Você tem 7 dias para experimentar
-            gratuitamente e consumir o conteúdo do Como salvar seu casamento!
-          </p>
-          <p class="main__guarantee--section__text--box__text">
-            Se, durante esse período, decidir que o conteúdo não é para você,
-            tudo bem...
-          </p>
-          <p class="main__guarantee--section__text--box__text">
-            Basta solicitar o reembolso pelo e-mail de suporte
-            (suporte@pequenasatitudes.com.br) que você receberá 100% do valor
-            investido de volta.
-          </p>
-        </article>
-      </section>
-    </main>
-    <footer class="footer">
-      <article class="footer__copyright">
-        <p class="footer__copyright__text">
-          ESTE SITE NÃO É do FACEBOOK: Estes site não faz parte do site do
-          Facebook ou do Meta Inc. Além disso, este site NÃO é endossado pelo
-          Facebook de nenhuma maneira. FACEBOOK é uma marca comercial
-          independente da META, Inc.
-        </p>
-      </article>
-    </footer>
-    <script src="app.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="pt-br"><head><meta name="facebook-domain-verification" content="7dgnx4pgjxr05430ge27gwhtirmros"><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Olá"><link rel="icon" href="./favicon.ico"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet"><link rel="stylesheet" href="./styles/style.css"><link rel="stylesheet" href="./styles/header.css"><link rel="stylesheet" href="./styles/main_header.css"><link rel="stylesheet" href="./styles/main_video.css"><link rel="stylesheet" href="./styles/main_promotion.css"><link rel="stylesheet" href="./styles/main_comments.css"><link rel="stylesheet" href="./styles/main_for.css"><link rel="stylesheet" href="./styles/main_guarantee.css"><link rel="stylesheet" href="./styles/footer.css"><title>Salve seu casamento</title><script>!function(e,t,n,c,o,a,f){e.fbq||(o=e.fbq=function(){o.callMethod?o.callMethod.apply(o,arguments):o.queue.push(arguments)},e._fbq||(e._fbq=o),(o.push=o).loaded=!0,o.version="2.0",o.queue=[],(a=t.createElement(n)).async=!0,a.src="https://connect.facebook.net/en_US/fbevents.js",(f=t.getElementsByTagName(n)[0]).parentNode.insertBefore(a,f))}(window,document,"script"),fbq("init","1722512338168052"),fbq("track","PageView")</script><noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1722512338168052&ev=PageView&noscript=1"></noscript></head><body><header class="header"><section class="header__container"><h1 class="header__title">Quer salvar o seu casamento? Você precisa assistir isso primeiro:</h1></section></header><main class="main"><section class="main__header--container"><h2 class="main__header--container__title">Assista esse vídeo antes que ele saia do ar!</h2><h2 class="main__header--container__title">No ar até<span class="attention"></span></h2></section><section class="main__video--container"><iframe class="main__video--container__video" src="https://www.youtube.com/embed/IhXkzWT-l3c?controls=0&disablekb=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" loading="lazy"></iframe></section><section class="main__promotion--container"><a class="main__promotion--container__button" href="https://checkout.ticto.com.br/OEA1849EC" rel="noreferrer" target="_blank">Garanta a promoção agora</a><p class="main__promotion--container__text">De<span class="line-through">R$ 199,90</span>por R$ 29,90</p></section><section class="main__comments--section"></section><section class="main__for--section"><h2 class="main__for--section__title">O que você vai aprender:</h2><ul class="main__for--section__list"><li class="main__for--section__list__item"><img class="main__for--section__list__item__icon" aria-hidden="true" src="./images/amor.png" loading="lazy"><p class="main__for--section__list__item__text">Identificar os problemas do seu casamento</p></li><li class="main__for--section__list__item"><img class="main__for--section__list__item__icon" aria-hidden="true" src="./images/amor.png" loading="lazy"><p class="main__for--section__list__item__text">Restauração por meio do diálogo</p></li><li class="main__for--section__list__item"><img class="main__for--section__list__item__icon" aria-hidden="true" src="./images/amor.png" loading="lazy"><p class="main__for--section__list__item__text">Plano de Ação! Quais atitudes devem ser tomadas para salvar o seu casamento</p></li><li class="main__for--section__list__item"><img class="main__for--section__list__item__icon" aria-hidden="true" src="./images/amor.png" loading="lazy"><p class="main__for--section__list__item__text">Entender quando é necessário buscar ajuda profissional</p></li><li class="main__for--section__list__item bonus"><img class="main__for--section__list__item__icon" aria-hidden="true" src="./images/amor.png" loading="lazy"><p class="main__for--section__list__item__text">BÔNUS: Guia do amor incondicional</p></li></ul></section><section class="main__guarantee--section"><img class="main__guarantee--section__image" src="./images/garantia.png" alt="Selo de garantia de 7 dias" loading="lazy"><article class="main__guarantee--section__text--box"><h2 class="main__guarantee--section__text--box__title">Teste grátis por 7 dias!</h2><p class="main__guarantee--section__text--box__text">E pode ficar tranquila... Você tem 7 dias para experimentar gratuitamente e consumir o conteúdo do Como salvar seu casamento!</p><p class="main__guarantee--section__text--box__text">Se, durante esse período, decidir que o conteúdo não é para você, tudo bem...</p><p class="main__guarantee--section__text--box__text">Basta solicitar o reembolso pelo e-mail de suporte (suporte@pequenasatitudes.com.br) que você receberá 100% do valor investido de volta.</p></article></section></main><footer class="footer"><article class="footer__copyright"><p class="footer__copyright__text">ESTE SITE NÃO É do FACEBOOK: Estes site não faz parte do site do Facebook ou do Meta Inc. Além disso, este site NÃO é endossado pelo Facebook de nenhuma maneira. FACEBOOK é uma marca comercial independente da META, Inc.</p></article></footer><script src="app.js"></script></body></html>
